--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "~9.1.1",
     "@ckeditor/ckeditor5-angular": "^1.2.3",
     "@ckeditor/ckeditor5-build-classic": "^18.0.0",
+    "ngx-file-drop": "^9.0.1",
     "ngx-logger": "^4.1.3",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
