--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,13 +4,13 @@
     {
       "type": "chrome",
       "request": "launch",
-      "name": "Launch Chromium against localhost",
+      "name": "Poor Blog CLient",
       "url": "http://localhost:4200/#",
       "webRoot": "${workspaceFolder}",
       "runtimeExecutable": "/usr/bin/chromium",
       "runtimeArgs": [
-        "--new-window",
-        "-user-data-dir=\"/${workspaceFolder}/DevProfile\"",
+        // "--new-window",
+        // "-user-data-dir=\"/${workspaceFolder}/DevProfile\"",
         "--remote-debugging-port=9222",
         "--disable-background-networking"
       ]
