Trigger npm:start as pre-task to debugger

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,8 @@
         // "-user-data-dir=\"/${workspaceFolder}/DevProfile\"",
         "--remote-debugging-port=9222",
         "--disable-background-networking"
-      ]
-  }
+      ],
+      "preLaunchTask":"npm: start"
+    }
   ]
 }
