--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,1 +1,1 @@
-{ "editor.defaultFormatter": "esbenp.prettier-vscode" }
+{ "editor.defaultFormatter": "esbenp.prettier-vscode", "terminal.integrated.shellArgs.linux": ["-i"] }
